# rules_scala

./: test_all.sh  test_thirdparty_version.sh
scala/: scala_cross_version.bzl
scala/private/: common.bzl  dependency.bzl  rule_impls.bzl
scala/private/phases/: phase_compile.bzl
scala/private/rules/: scala_library.bzl
src/java/io/bazel/rulesscala/scalac/: CompileOptions.java  ScalacProcessor.java
test/proto/: BUILD
test_expect_failure/plus_one_deps/deps_of_exports/: BUILD.bazel
test_expect_failure/plus_one_deps/exports_of_deps/: BUILD.bazel
test_expect_failure/plus_one_deps/external_deps/: BUILD.bazel
test_expect_failure/plus_one_deps/internal_deps/: BUILD.bazel
test_expect_failure/plus_one_deps/with_unused_deps/: BUILD.bazel
