load("//scala:scala.bzl", "scala_library")

scala_library(
    name = "a",
    srcs = ["A.scala"],
    deps = [":b"],
    unused_dependency_checker_mode = "error",
)

scala_library(
    name = "b",
    srcs = ["B.scala"],
    deps = [":c"],
    unused_dependency_checker_mode = "error",
)

scala_library(
    name = "c",
    srcs = ["C.scala"],
    unused_dependency_checker_mode = "error",
)
